# jiro

./: .env  Cargo.toml  configuration.yaml  readme.md
.github/workflows/: rust.yml
.sqlx/: query-4fb7775a9ae89222fb7f55dab9e6ac4163fc9d6f2bcdbb00d09eef86e8b8b8fb.json  query-fd8dbe88ca064967cf280cd5859cdc39679e43943130ec5886ab98b5a0815fc3.json
migrations/: 20240411055645_create_user_table.sql  20240412013624_course.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  start_server.rs
src/model/: course.rs
src/routes/: add_course.rs  mod.rs  signup.rs
tests/: health_check.rs
